# folds-r

./: LICENSE  folds-r.cabal  right-folds.cabal
test/: Main.hs
